<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="kylehorton.ser210.quinnipiac.edu.chucknorris.SettingsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_main" />

            <TextView
                android:id="@+id/settingsText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="#000000"
                android:textSize="40dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/backText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="Please select a background color!"
                android:textColor="#000000"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="95dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/darkBTN"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="#8e8e8e"
                    android:text="@string/darkTheme" />

                <Space
                    android:layout_width="35dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/dayBTN"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="#ffffff"
                    android:text="@string/dayTheme"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/defaultTheme"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:text="@string/defaultTheme"
                    android:textColor="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/fontText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="Please select a text font size!"
                android:textColor="#000000"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <Space
                    android:layout_width="95dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/matchmakerBTN"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:text="@string/matchmakerTXT" />

                <Space
                    android:layout_width="35dp"
                    android:layout_height="match_parent" />


                <Button
                    android:id="@+id/bubblegumBTN"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:text="@string/bubblegumTXT" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/defaultText"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:text="@string/defaultTXT" />
            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>
</ScrollView>